--- a/presentation/1d.tex
+++ b/presentation/1d.tex
@@ -1,6 +1,5 @@
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
-  \textbf{1-D Neutronics Model Geometries}
+  \frametitle{1-D MSRE Neutronics Model Geometries}
   \begin{figure}[htb!]
     \centering
     \includegraphics[width=0.9\columnwidth]{case-geometry}
@@ -13,7 +12,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Modeling Approach}
   \begin{columns}
     \column{5.5cm}
     \textbf{1-D Neutronics Model Setup}
@@ -21,7 +20,7 @@
 
     \begin{itemize}
       \item Material compositions derived from the MSRE design
-      \item Reduced gadolinium content in control rod to reduce rod worth from 50000 pcm to 20000 pcm
+      \item Reduced gadolinium content in control rod to 0.35 wt\%
       \item Eight neutron energy groups
       \item Group constants generated using OpenMC with up to 2nd-order Legendre expansions of scattering
         matrices
@@ -52,7 +51,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Modeling Approach}
   \textbf{1-D Neutronics Model Numerical Solvers}
   \vspace{.2cm}
 
@@ -77,7 +76,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Simulation Results}
   \textbf{1-D Neutronics Model Reactivity Results}
   \begin{figure}[h]
     \centering
@@ -89,7 +88,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Simulation Results}
   \textbf{1-D Neutronics Model Control Rod Worth Results}
   \begin{figure}[h]
     \centering
@@ -104,52 +103,12 @@
 %  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
   \begin{columns}
     \column{5.5cm}
-    \begin{figure}[htb!]
-      \centering
-      \includegraphics[width=\columnwidth]{case-3a-flux}
-      \caption{Case 3a neutron group flux distributions from OpenMC-CE and OpenMC-MG.}
-      \label{fig:3a-flux}
-    \end{figure}
-    \column{5.5cm}
-    \begin{figure}[htb!]
-      \centering
-      \includegraphics[width=\columnwidth]{case-3b-flux}
-      \caption{Case 3b neutron group flux distributions from OpenMC-CE and OpenMC-MG.}
-      \label{fig:3b-flux}
-    \end{figure}
-  \end{columns}
-\end{frame}
-
-\begin{frame}
-%  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
-  \begin{columns}
-    \column{5.5cm}
-    \textbf{Case 3a Neutron Flux Distributions}
+    \textbf{Case 3b Neutron Flux Distributions}
     \begin{itemize}
       \item The neutron diffusion and hybrid methods fare worse than the $S_8$ method at capturing
         the oscillatory flux pattern.
       \item The hybrid method performs better than the neutron diffusion method near $x=0$ cm where
-        the correction region is situated.
-    \end{itemize}
-    \column{5.5cm}
-    \begin{figure}[htb!]
-      \centering
-      \includegraphics[width=.975\columnwidth]{case-3a-flux-diff}
-      \caption{Absolute difference in neutron group flux distributions for Case 3a from Moltres-$S_8$,
-      Moltres-diffusion, Moltres-hybrid, and Python-hybrid relative to OpenMC-MG.}
-      \label{fig:3a-flux-diff}
-    \end{figure}
-  \end{columns}
-\end{frame}
-
-\begin{frame}
-%  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
-  \begin{columns}
-    \column{5.5cm}
-    \textbf{Case 3b Neutron Flux Distributions}
-    \begin{itemize}
-      \item The neutron diffusion method performance worsens with the control rod region introduced
-        near $x=0$.
+        the control rod is situated.
     \end{itemize}
     \column{5.5cm}
     \begin{figure}[htb!]
@@ -163,39 +122,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
-  \textbf{Impact of Correction Subregion Sizes on $k$}
-  \begin{itemize}
-    \item Minimizing the correction region size is essential for the hybrid method to be
-      computationally efficient for time-dependent simulations.
-    \item $k$ varies by up to 164 pcm for Case 3a and 109 pcm for Case 3b.
-    \item The hybrid method $k$ value does not converge monotonically towards the $S_8$ method $k$ value,
-      implying other sources of discrepancies.
-  \end{itemize}
-  \begin{figure}[h]
-    \centering
-    \begin{subfigure}[b]{0.49\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{correction-size-a-k}
-      \caption{Case 3a}
-      \label{fig:v1-size-a-k}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.49\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{correction-size-b-k}
-      \caption{Case 3b}
-      \label{fig:v1-size-b-k}
-    \end{subfigure}
-    \caption{$k_\text{eff}$ estimates from the hybrid method for Cases 3a and 3b with different
-    correction subregion sizes. The horizontal lines indicate $k_\text{eff}$ estimates from the
-    OpenMC-CE, OpenMC-MG, and $S_8$ methods.}
-    \label{fig:v1-size-k}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Simulation Results}
   \textbf{Impact of Correction Subregion Sizes on Rod Worth}
   \begin{itemize}
     \item Rod worth estimates vary non-monotonically with increasing correction subregion size.
@@ -214,26 +141,13 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
-  \textbf{Relaxing the $S_N$ Convergence Tolerance}
-  \begin{itemize}
-    \item The hybrid $S_N$-diffusion method iteratively couples the neutron diffusion solver with
-      the $S_N$ subsolver.
-    \item Diffusion-based acceleration schemes for neutron transport methods typically do not
-      require the neutron transport calculations to fully converge.
-    \item Transport correction parameters tend to converge faster than scalar flux.
-    \item Relaxing the $S_N$ subsolver convergence tolerance would provide computational savings to
-      the hybrid method.
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 1-D Neutronics Eigenvalue Simulations}
+  \frametitle{1-D MSRE Neutronics Simulation Results}
   \begin{columns}
     \column{7cm}
     \textbf{Relaxing the $S_N$ Convergence Tolerance}
     \begin{itemize}
-      \item The number of outer iterations generally increases with the $S_8$ convergence tolerance.
+      \item Transport correction parameters converge faster than scalar flux in the $S_N$ subsolver.
+      \item Relaxing the $S_N$ subsolver convergence tolerance would provide computational savings.
       \item The hybrid method exhibits superlinear ($q=1.333$) convergence in $k$ with respect to
         the $S_8$ convergence tolerance value.
     \end{itemize}
