--- a/presentation/2d.tex
+++ b/presentation/2d.tex
@@ -1,6 +1,5 @@
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
-  \textbf{2-D Neutronics Quarter-Core \& Full-Core MSRE Models}
+  \frametitle{2-D Neutronics Quarter-Core \& Full-Core MSRE Models}
   \begin{columns}
     \column{5.5cm}
   \begin{figure}[htb!]
@@ -22,7 +21,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
+  \frametitle{2-D MSRE Neutronics Modeling Approach}
   \begin{columns}
     \column{6.5cm}
     \textbf{2-D Neutronics MSRE Model Setup}
@@ -48,7 +47,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
+  \frametitle{2-D MSRE Neutronics Simulation Results}
   \textbf{2-D Quarter-Core $k$ \& Rod Worth Results}
   \begin{table}[htb]
     \small
@@ -71,7 +70,7 @@
   \end{table}
   \vspace{.2cm}
 
-  The hybrid method produces accurate rod worth estimates while the neutron diffusion method
+  $\Rightarrow$ The hybrid method produces accurate rod worth estimates while the neutron diffusion method
       significantly overestimates rod worth.
 \end{frame}
 
@@ -80,7 +79,7 @@
 %  \textbf{Normalized Fuel Channel Power Distribution}
   \begin{columns}
     \column{6cm}
-    \centerline{\textbf{Control Rod Withdrawn}}
+    \centerline{\large \textbf{Control Rod Withdrawn}}
   \begin{figure}[p]
     \centering
     \includegraphics[width=\columnwidth]{msre-quarter-no-rod-power}
@@ -89,7 +88,7 @@
     \label{fig:1/4-no-rod}
   \end{figure}
     \column{6cm}
-    \centerline{\textbf{Control Rod Inserted}}
+    \centerline{\large \textbf{Control Rod Inserted}}
   \begin{figure}[p]
     \centering
     \includegraphics[width=\columnwidth]{msre-quarter-rod-power}
@@ -101,7 +100,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
+  \frametitle{2-D MSRE Neutronics Simulation Results}
   \textbf{2-D Quarter-Core Normalized Fuel Channel Power Distribution}
   \begin{table}[htb]
     \small
@@ -129,7 +128,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
+  \frametitle{2-D MSRE Neutronics Simulation Results}
   \textbf{2-D Full-Core Rod Worth Results}
   \begin{table}[htb]
     \small
@@ -152,14 +151,12 @@
   \end{table}
   \vspace{.2cm}
 
-  \begin{itemize}
-    \item The hybrid method remains effective at improving control rod worth estimates in the full-core
+  $\Rightarrow$ The hybrid method remains effective at improving control rod worth estimates in the full-core
   model.
-  \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Hybrid $S_N$-Diffusion Method: 2-D Neutronics Eigenvalue Simulations}
+  \frametitle{2-D MSRE Neutronics Simulation Results}
   \textbf{2-D Full-Core Normalized Fuel Channel Power Distribution}
   \begin{table}[htb]
     \footnotesize
