--- a/presentation/conclusion.tex
+++ b/presentation/conclusion.tex
@@ -32,7 +32,7 @@
     \end{itemize}
     \textbf{Results Presented}
     \begin{itemize}
-      \item CNRS numerical benchmark study with Moltres
+      \item CNRS numerical benchmark study with Moltres (Dissertation)
       \item MSRE pump transient V\&V study with Moltres
     \end{itemize}
     \textbf{Major takeaways}
@@ -73,11 +73,10 @@
 
 \begin{frame}
   \frametitle{Conclusion}
-  \begin{block}{\textbf{Hybrid $S_N$-Diffusion Method}}
+  \begin{block}{\textbf{Hybrid $\bm{S_N}$-Diffusion Method}}
     \textbf{Relevance}
     \begin{itemize}
-      \item No MSR studies exist for time-dependent MSR simulations involving reactivity-initiated
-        transients using control rods
+      \item There are no MSR simulation tools or studies that explicitly model moving control rods.
     \end{itemize}
     \textbf{Results Presented}
     \begin{itemize}
@@ -94,7 +93,7 @@
         the $S_N$ subsolver and the neutron diffusion solver to smooth flux gradients
       \item The hybrid method accurately reproduces control rod worths at only four times the
         computational cost of the neutron diffusion method
-      \item The hybrid method exhibits decent scalability on high-performance computing clusters
+      \item The hybrid method exhibits good scalability on high-performance computing clusters
     \end{itemize}
   \end{block}
 \end{frame}
