--- a/presentation/objectives.tex
+++ b/presentation/objectives.tex
@@ -1,23 +1,23 @@
 \begin{frame}
   \frametitle{Objectives}
   \begin{block}{\textbf{Overarching Goal of this Work}}
-    \textbf{Improve Moltres as a MSR simulation tool by enabling a wider range of MSR simulation
-    scenarios.}
+    Improve Moltres as a MSR simulation tool by enabling a wider range of MSR simulation
+    scenarios.
   \end{block}
   \begin{block}{\textbf{Objectives}}
     \begin{enumerate}
       \item \textbf{Improve Multiphysics Capabilities in Moltres}
       \begin{itemize}
-        \item \textbf{Verify and Validate Existing Multiphysics Coupling Capabilities in Moltres}
-        \item \textbf{Implement a RANS-based Turbulence Model in Moltres}
+        \item Verify and validate existing multiphysics coupling capabilities in Moltres
+        \item Implement a RANS-based turbulence model in Moltres
       \end{itemize}
       \item \textbf{Develop a Hybrid Neutronics Method for Control Rod Modeling in Moltres}
       \begin{itemize}
-        \item \textbf{Develop and implement the hybrid $S_N$-diffusion method in Moltres}
-        \item \textbf{Verify the hybrid method against high-fidelity neutronics codes and MSRE
-          experimental data}
-        \item \textbf{Demonstrate a time-dependent reactivity-initiated simulation using the hybrid
-          method}
+        \item Develop and implement the hybrid $S_N$-diffusion method in Moltres
+        \item Verify the hybrid method against high-fidelity neutronics codes and MSRE
+          experimental data
+        \item Demonstrate a time-dependent reactivity-initiated simulation using the hybrid
+          method
       \end{itemize}
     \end{enumerate}
   \end{block}
