--- a/presentation/3d-transient.tex
+++ b/presentation/3d-transient.tex
@@ -23,19 +23,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{MSRE Rod Drop Experiment}
-  \textbf{Rod Height}
-  \begin{figure}[htb!]
-    \centering
-    \includegraphics[width=0.7\columnwidth]{rod-height}
-    \caption{Evolution of rod height evaluated at each timestep within the first second of the rod
-    drop simulation. The rod reaches its fully inserted height at $t=0.4046$ s.}
-    \label{fig:rod-height}
-  \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{MSRE Rod Drop Experiment}
+  \frametitle{MSRE Rod Drop Modeling Approach}
   \textbf{Nested Coupling Iteration Structure for the Rod Drop Simulation}
   \begin{figure}[t]
     \tikzstyle{every node}=[font=\small]
@@ -48,7 +36,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{MSRE Rod Drop Experiment}
+  \frametitle{MSRE Rod Drop Simulation Results}
   \textbf{Neutron Count Rate Following Rod Drop}
   \begin{columns}
     \column{5.5cm}
@@ -77,7 +65,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{MSRE Rod Drop Experiment}
+  \frametitle{MSRE Rod Drop Simulation Results}
   \textbf{Integral Neutron Count Following Rod Drop}
   \begin{columns}
     \column{5.5cm}
@@ -123,7 +111,7 @@
   \frametitle{3-D Modeling with the Hybrid Method}
   \begin{block}{\textbf{Difficulties Faced During 3-D Modeling}}
   \begin{itemize}
-    \item Poor convergence rate relative to 1-D \& 2-D modeling
+    \item Slow convergence rate relative to 1-D \& 2-D modeling
     \begin{itemize}
       \item Likely due to increased streaming effects in 3-D near-void (air) regions in the reactor
     \end{itemize}
