--- a/presentation/moltres.tex
+++ b/presentation/moltres.tex
@@ -8,9 +8,9 @@
       that supports the development of multiphysics solvers
     \item Robust and highly scalable numerical routines from PETSc
     \item Flexible coupling capabilities provided by the MOOSE Multi-App system
-    \item Highly extensible and user-friendly interface for software development through
-      object-oriented programming paradigm in C++ and native compatibility with other MOOSE-based
-      apps
+%    \item Highly extensible and user-friendly interface for software development through
+%      object-oriented programming paradigm in C++ and native compatibility with other MOOSE-based
+%      apps
   \end{itemize}
 \end{frame}
 
@@ -75,20 +75,3 @@
     \end{itemize}
   \end{block}
 \end{frame}
-
-%\begin{frame}
-%  \frametitle{Moltres}
-%  \begin{block}<1->{\textbf{Gaps in Moltres Software Development}}
-%    \begin{itemize}
-%      \item Rigorous verification and validation (V\&V) of existing multiphysics capabilities for
-%        MSR modeling
-%      \item Turbulence modeling capability for simulating high-Reynolds number flows in MSRs
-%    \end{itemize}
-%  \end{block}
-%  \begin{block}<2->{\textbf{Proposed Work}}
-%    \begin{itemize}
-%      \item \textbf{Verify and Validate Existing Multiphysics Coupling Capabilities in Moltres}
-%      \item \textbf{Implement a RANS-based Turbulence Model in Moltres}
-%    \end{itemize}
-%  \end{block}
-%\end{frame}
