--- a/presentation/msre-transients.tex
+++ b/presentation/msre-transients.tex
@@ -1,13 +1,12 @@
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Description of MSRE Pump Experiments}
+  \frametitle{Description of MSRE Pump Experiments}
   \begin{itemize}
-    \item Starting from zero-power critical states with/without forced flow, the fuel salt pump
-  was coasted down/started up
+    \item Starting from zero-power critical states under static/steady-flow conditions, the fuel salt pump
+  was started up/coasted down.
     \item Reactor was kept critical by a flux-servo controller moving the rod in response to flux
-      changes
+      changes.
   \end{itemize}
-  \begin{block}{\textbf{MSR Phenomena Involved}}
+  \begin{block}{\textbf{MSR Physics Phenomena Involved}}
     \begin{itemize}
       \item DNP drift under time-varying flow
       \item Loss of delayed neutrons due to out-of-core DNP decay
@@ -55,14 +54,14 @@
 %\end{frame}
 
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
+  \frametitle{V\&V Study: MSRE Pump Start-up \& Coast-Down Transients}
   \begin{columns}
     \column{6.5cm}
     \begin{block}{\textbf{Aim of the Study}}
       \begin{itemize}
-         \item Develop a V\&V study based on the MSRE pump transients
-         \item Verify Moltres against QuasiMolto in collaboration with Aaron Reynolds
-           (formerly at Oregon State University)
+         \item Develop a verification and validation (V\&V) study based on the MSRE pump transients
+         \item Verify Moltres against QuasiMolto \cite{reynolds_analysis_2023} in collaboration
+           with Dr.\ Aaron Reynolds
          \item Validate Moltres against MSRE experimental data for modeling \gls{DNP} drift
        \end{itemize}
     \end{block}
@@ -70,7 +69,7 @@
       \begin{itemize}
         \item Two neutron energy groups and six DNP groups
         \item Ignored upper and lower plena in the geometry
-        \item Looped salt flow with a salt circulation time of 25.2 s
+%        \item Looped salt flow with a salt circulation time of 25.2 s
         \item $k$-eigenvalue calculation at every time-step ($dt=0.1$ s) in place of reactivity control
       \end{itemize}
     \end{block}
@@ -86,8 +85,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{$k_\text{eff}$ Under Static \& Steady-Flow Conditions}
+  \frametitle{MSRE $k_\text{eff}$ Estimates Under Static \& Steady-Flow Conditions}
   \begin{table}[htb]
     \centering
     \caption{Multiplication factors $k_\text{eff}$ under static and steady salt flow conditions, and
@@ -111,8 +109,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Neutron Flux Distributions Under Static Conditions}
+  \frametitle{MSRE Neutron Flux Distributions Under Static Conditions}
   \begin{figure}[h]
     \centering
     \begin{subfigure}[b]{0.48\columnwidth}
@@ -138,101 +135,69 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{DNP Distributions Under Static Conditions}
-  \begin{figure}[t]
-    \centering
-    \begin{subfigure}[b]{0.48\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{centerline_pre}
-      \caption{Normalized centerline \gls{DNP} distributions.}
-      \label{fig:centerline-pre-dist}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.48\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{midplane_pre}
-      \caption{Normalized midplane \gls{DNP} distributions.}
-      \label{fig:midplane-pre-dist}
-    \end{subfigure}
-    \caption{\gls{DNP} distribution from Moltres and ratios comparing QuasiMolto and
-    Moltres models under static \gls{MSRE} conditions. Maximum relative difference $\approx 0.1 \%$.}
-    \label{fig:centerline-pre}
-  \end{figure}
-  \begin{itemize}
-    \item Perfect overlap in centerline and midplane DNP distributions between Moltres and QuasiMolto.
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Pump Start-Up Transient Results}
+  \frametitle{MSRE Pump Start-Up Transient Results}
   \begin{columns}
   \column{5.5cm}
   \begin{figure}[t]
     \centering
     \includegraphics[width=\columnwidth]{start-up-v2-reactivity}
-    \caption{Reactivity loss (relative to static no-flow conditions) during the \gls{MSRE} pump
+    \caption{Reactivity loss (relative to static conditions) during the \gls{MSRE} pump
     start-up transient.}
     \label{fig:start-up-reactivity}
   \end{figure}
   \column{5.5cm}
-  \textbf{Observations}
+  \textbf{Numerical Results}
   \begin{itemize}
-    \item Steep initial reactivity loss due to DNP outflow
-    \item Reactivity loss plateaus temporarily before dropping due to DNP reentry
-    \item Circulation of the excess DNP cause reactivity oscillations
-    \item Oscillations eventually dissipate due to decay of excess DNP
-    \item Excellent agreement between Moltres and QuasiMolto
+    \item Reactivity loss plateaus after excess DNPs exit.
+    \item Circulation of the excess DNPs cause reactivity oscillations that eventually dissipate.
+    \item Excellent agreement between Moltres and QuasiMolto.
   \end{itemize}
-  \end{columns}
-\end{frame}
-
-\begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Pump Start-Up Transient Results}
-  \begin{columns}
-  \column{5.5cm}
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=\columnwidth]{start-up-v2-reactivity}
-    \caption{Reactivity loss (relative to static no-flow conditions) during the \gls{MSRE} pump
-    start-up transient.}
-    \label{fig:start-up-reactivity}
-  \end{figure}
-  \column{5.5cm}
+  \pause
   \textbf{Discrepancies against MSRE Data}
   \begin{itemize}
-    \item MSRE reported a smaller final reactivity loss
-    \item MSRE did not report a reactivity plateau (due to DNP present in the upper and lower plena)
-    \item MSRE did not log significant reactivity oscillations after the first peak
+    \item MSRE had a smaller final reactivity loss.
+    \item MSRE did not report a reactivity plateau (due to DNPs present in the upper and lower plena).
+    \item MSRE did not log significant reactivity oscillations after the first peak.
   \end{itemize}
   \end{columns}
 \end{frame}
 
+%\begin{frame}
+%  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
+%  \textbf{Pump Start-Up Transient Results}
+%  \begin{columns}
+%  \column{5.5cm}
+%  \begin{figure}[t]
+%    \centering
+%    \includegraphics[width=\columnwidth]{start-up-v2-reactivity}
+%    \caption{Reactivity loss (relative to static no-flow conditions) during the \gls{MSRE} pump
+%    start-up transient.}
+%    \label{fig:start-up-reactivity}
+%  \end{figure}
+%  \column{5.5cm}
+%  \textbf{Discrepancies against MSRE Data}
+%  \begin{itemize}
+%    \item MSRE reported a smaller final reactivity loss
+%    \item MSRE did not report a reactivity plateau (due to DNP present in the upper and lower plena)
+%    \item MSRE did not log significant reactivity oscillations after the first peak
+%  \end{itemize}
+%  \end{columns}
+%\end{frame}
+
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
-  \textbf{Pump Coast-Down Transient Results}
-  \begin{columns}
-  \column{5.5cm}
+  \frametitle{Pump Coast-Down Transient Results}
   \begin{figure}[t]
     \centering
-    \includegraphics[width=\columnwidth]{coast-down-v2-reactivity}
+    \includegraphics[width=.7\columnwidth]{coast-down-v2-reactivity}
     \caption{Reactivity loss (relative to static no-flow conditions) during the \gls{MSRE} pump
     coast-down transient.}
     \label{fig:start-up-reactivity}
   \end{figure}
-  \column{5.5cm}
-  \textbf{Observations}
-  \begin{itemize}
-    \item Reactivity loss remains briefly stable at the start due to flow inertia
-    \item Monotonic decline in reactivity loss over time
-  \end{itemize}
-  \end{columns}
+  Good agreement between numerical and experimental data other than the magnitude differences.
 \end{frame}
 
 \begin{frame}
-  \frametitle{V\&V Study 2: MSRE Pump Start-up \& Coast-Down Transients}
+  \frametitle{Summary: MSRE Pump Start-up \& Coast-Down Transients}
   \begin{block}{\textbf{Study Outcome}}
     \begin{itemize}
       \item Moltres and QuasiMolto are highly consistent with each other in their looped DNP flow
