--- a/presentation/turb-moltres.tex
+++ b/presentation/turb-moltres.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \begin{block}{\textbf{Why the Spalart-Allmaras Model for Moltres?}}
+  \begin{block}{\textbf{Why the Spalart-Allmaras Model \cite{spalart_one-equation_1994} for Moltres?}}
     A computationally efficient one-equation model that provides reasonable estimates for wall-bounded
     turbulent flows and is tractable for large problems on small computing clusters.
   \end{block}
@@ -53,8 +53,7 @@
   \begin{block}{\textbf{Model Implementation Details}}
   \begin{itemize}
     \item Built on top of an existing incompressible Navier-Stokes model in MOOSE
-    \item Uses \gls{SUPG} stabilization scheme for numerical stability
-    \item $f_{t2}$ turbulence trip term is togglable (Negligible difference in fully turbulent flows)
+    \item Uses Streamline-Upwind/Petrov-Galerkin (SUPG) stabilization scheme for numerical stability
     \item Rotation correction scheme \cite{aupoix_extensions_2003, dacles-mariani_numericalexperimental_1995}
       reduces eddy viscosity in regions of rotational but non-turbulent flow
   \end{itemize}
@@ -73,15 +72,14 @@
       \item Backward-Facing Step Flow Validation Test
       \begin{itemize}
         \item Reference results: Experimental results by Driver \& Seegmiller \cite{driver_features_1985}
-        \item Reference results: Spalart-Allmaras model results from CFL3D CFD code \cite{krist_cfl3d_1998}
+        \& Spalart-Allmaras model results from CFL3D CFD code \cite{krist_cfl3d_1998}
       \end{itemize}
     \end{enumerate}
   \end{block}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Turbulent Channel Flow Verification Test Results}
+  \frametitle{Turbulent Channel Flow Verification Test Results}
   \begin{figure}[htb!]
     \centering
     \begin{subfigure}[b]{0.32\columnwidth}
@@ -107,14 +105,13 @@
     \gls{DNS} results \cite{moser_direct_1999}.}
     \label{fig:channel-verification}
   \end{figure}
-  \begin{itemize}
-    \item The Moltres Spalart-Allmaras model results are consistent with reference DNS channel flow data.
-  \end{itemize}
+  \vspace{.1cm}
+
+  $\Rightarrow$ The Moltres Spalart-Allmaras model results are consistent with reference DNS channel flow data.
 \end{frame}
 
 \begin{frame}
-  \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Turbulent Pipe Flow Validation Test Results}
+  \frametitle{Turbulent Pipe Flow Validation Test Results}
   \begin{figure}[htb]
     \centering
     \begin{subfigure}[b]{0.32\columnwidth}
@@ -139,15 +136,14 @@
     \caption{Comparison of turbulent pipe flow results at Re $\approx 40000$ against reference
     experimental data \cite{laufer_structure_1954}.}
     \label{fig:pipe-verification}
-  \begin{itemize}
-    \item The Moltres Spalart-Allmaras model results are consistent with reference experimental pipe flow data.
-  \end{itemize}
   \end{figure}
+  \vspace{.1cm}
+
+  $\Rightarrow$ The Moltres Spalart-Allmaras model results are consistent with reference experimental pipe flow data.
 \end{frame}
 
 \begin{frame}
-  \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Backward-Facing Step Flow Validation Test Results}
+  \frametitle{Backward-Facing Step Flow Validation Test Setup}
   \begin{columns}
     \column{5.5cm}
     \begin{figure}[h]
@@ -169,8 +165,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Backward-Facing Step Flow Validation Test Results}
+  \frametitle{Backward-Facing Step Flow Validation Test Results}
   \begin{columns}
     \column{5.5cm}
     \begin{figure}[htb!]
@@ -196,56 +191,48 @@
       \end{tabular}
       \label{table:bfs-reattach}
     \end{table}
-    \begin{itemize}
-      \item Moltres is consistent with experimental data (within uncertainty range) while CFL3D
-        falls outside the uncertainty range.
-    \end{itemize}
+    \vspace{.1cm}
+
+    $\Rightarrow$ Moltres is consistent with experimental data (within uncertainty range) while CFL3D
+    falls outside the uncertainty range.
   \end{columns}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Spalart-Allmaras Turbulence Model in Moltres}
-  \textbf{Backward-Facing Step Flow Validation Test Results}
+  \frametitle{Backward-Facing Step Flow Validation Test Results}
   \begin{columns}
-    \column{11cm}
-  \begin{figure}[htb]
-    \centering
-    \hfill
-    \begin{subfigure}[t]{0.24\columnwidth}
+    \column{11.5cm}
+    \begin{figure}[htb]
       \centering
-      \includegraphics[width=\columnwidth]{bfs_downstream_vel}
-      \caption{Normalized velocity distributions downstream of step.}
-      \label{fig:bfs-downstream}
-    \end{subfigure} %\hfill \\
-%    \centering
-    \hfill
-    \begin{subfigure}[t]{0.24\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{bfs_cf}
-      \caption{Skin friction coefficient along the bottom wall.}
-      \label{fig:bfs-cf}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[t]{0.24\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{bfs_cp}
-      \caption{Skin pressure coefficient along the bottom wall.}
-      \label{fig:bfs-cp}
-    \end{subfigure}% \hfill \\
-%    \centering
-    \begin{subfigure}[t]{0.24\columnwidth}
-      \centering
-      \includegraphics[width=\columnwidth]{bfs_stress}
-      \caption{Normalized turbulent shear stress downstream
-      of step.}
-      \label{fig:bfs-stress}
-    \end{subfigure}
-    \caption{Comparison of backward facing step flow results against reference
-    experimental data and computational data from CFL3D. $x/H$ values are normalized horizontal
-    distances relative to the step.}
-    \label{fig:bfs-plots}
-  \end{figure}
-\end{columns}
+      \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{bfs_downstream_vel}
+        \caption{Normalized velocity distributions downstream of step.}
+        \label{fig:bfs-downstream}
+      \end{subfigure} %\hfill \\
+      \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{bfs_cf}
+        \caption{Skin friction coefficient along the bottom wall.}
+        \label{fig:bfs-cf}
+      \end{subfigure}
+      \begin{subfigure}[t]{0.32\columnwidth}
+        \centering
+        \includegraphics[width=\columnwidth]{bfs_stress}
+        \caption{Normalized turbulent shear stress downstream
+        of step.}
+        \label{fig:bfs-stress}
+      \end{subfigure}
+      \caption{Comparison of backward facing step flow results against reference
+      experimental data and computational data from CFL3D. $x/H$ values are normalized horizontal
+      distances relative to the step.}
+      \label{fig:bfs-plots}
+    \end{figure}
+  \end{columns}
+  \begin{itemize}
+    \item Minor discrepancies between numerical and experimental data typical of RANS-based turbulence models.
+    \item Moltres provides more accurate measurements along $x/H=1$ than CFL3D.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -253,8 +240,8 @@
   \begin{block}{\textbf{Spalart-Allmaras Model V\&V Test Summary}}
     \begin{itemize}
       \item Good agreement between Moltres and reference solutions in the turbulent channel and pipe
-        flow tests
-      \item Good agreement between Moltres and CFL3D in the backward-facing step flow test
+        flow tests.
+      \item Good agreement between Moltres and CFL3D in the backward-facing step flow test.
       \item Some discrepancy between Moltres and experimental data in the backward-facing step flow
         test, but Moltres performed better than CFL3D at predicting flow reattachment length and
         velocity/stress distributions along $x/H=1$.
